--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="5tlr0u057mlymko3cal451ws8ev3qv" />
+    <title>Document</title>
+</head>
+<body>
+CAPTRUST 2022 HOMECOURT FUND GP, LLC
+4208 SIX FORKS RD 17TH FLOOR, RALEIGH, NC 27609
+</body>
+</html>
+
